--- a/jp/frequentist-1.qmd
+++ b/jp/frequentist-1.qmd
@@ -191,11 +191,11 @@ Keywords: clinical trial, p-value, survival/competing-risk
 ![](clinical-trial-1.png)
 
 ::: voice-father
-お父さん「この図は、いわゆるKaplan-Meier曲線だよ。図AがOS、図BがDFSだね。どちらの図でも、TH群（青の曲線）よりLTA群（赤の曲線）の方が下にある。つまりTH群の方が、治療成績がいい」
+お父さん「この図は、いわゆる**Kaplan-Meier曲線**だよ。図AがOS、図BがDFSだね。どちらの図でも、TH群（青の曲線）よりLTA群（赤の曲線）の方が下にある。つまりTH群の方が、治療成績がいい」
 :::
 
 ::: voice-daughter
-私「そこまではわかるの。知りたいのは細かいところなんだってば。最初につまずいたのが、生存曲線の下に書いてあるアットリスク数 （number at risk）でね。これって時点ごとの人数のことでしょ。図Aと図Bの手術時点の人数を見てよ。図Aは82人と85人、図Bは76人と75人で、左右で解析された人数が違うの。理由はわかる？」
+私「そこまではわかるの。知りたいのは細かいところなんだってば。最初につまずいたのが、生存曲線の下に書いてある**アットリスク数 （number at risk）**でね。これって時点ごとの人数のことでしょ。図Aと図Bの手術時点の人数を見てよ。図Aは82人と85人、図Bは76人と75人で、左右で解析された人数が違うの。理由はわかる？」
 :::
 
 ::: voice-father
@@ -215,7 +215,7 @@ Keywords: clinical trial, p-value, survival/competing-risk
 :::
 
 ::: voice-father
-お父さん「そうすると、必ずしも術後3年以上追跡されるわけじゃないよね。以前、”打ち切り”について話したことがあったよね。生存時間データは、イベントと打ち切りから構成される。3年以内に打ち切りが多いのは不自然だけど、3年以降に追跡が打ち切られるのは計画通りのことだよ」
+お父さん「そうすると、必ずしも術後3年以上追跡されるわけじゃないよね。以前、**打ち切り**について話したことがあったよね。生存時間データは、イベントと打ち切りから構成される。3年以内に打ち切りが多いのは不自然だけど、3年以降に追跡が打ち切られるのは計画通りのことだよ」
 :::
 
 ::: voice-daughter
