--- a/jp/frequentist-5.qmd
+++ b/jp/frequentist-5.qmd
@@ -193,15 +193,15 @@ Keywords: clinical trial, simulation, study design, observational study
 :::
 
 ::: voice-father
-お父さん「前回は信頼区間のとサンプルサイズだったよね。でも、もしストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究をしたいなら、p値や仮説検定の考え方にそってサンプルサイズを計算しないといけない」
+お父さん「前回は信頼区間とサンプルサイズだったよね。でも、もしストーマ造設ありとなしの復職率を比べるような仮説検証を目指した研究をしたいなら、仮説検定の考え方にそってサンプルサイズを計算しないといけない」
 :::
 
 ::: voice-daughter
-私「仮説検定ってp値のこと？」
+私「仮説検定って**p値**のこと？」
 :::
 
 ::: voice-father
-お父さん「そうそう。そっちの話をするなら、p値とαエラー・βエラーの関係を説明しないとだな。この前、JCOG9502の論文もってきたとき、どこまで話したっけ？」
+お父さん「そうそう。そっちの話をするなら、p値と**αエラー**・**βエラー**の関係を説明しないとだな。この前、JCOG9502の論文もってきたとき、どこまで話したっけ？」
 :::
 
 ::: voice-daughter
@@ -229,7 +229,7 @@ Keywords: clinical trial, simulation, study design, observational study
 
 JCOG9502を題材に考えてみましょう。この場合の真実は「LTA群はTH群に比べ全生存期間を延長する効果がある」と「効果がない」の2通りがあるといいました。一方で、試験の結果もp\<0.05とp≥0.05の2通りです。これらを組み合わせは2×2の4通りがあります。
 
-このうち、臨床試験の結果から判断を誤ってしまうケースは2つです。つまり、効果があるのにp≥0.05になってしまうケースと、効果がないのに（帰無仮説が正しいのに）p\<0.05になってしまうケースです。仮説検定では、前者をαエラー（alpha error）、後者をβエラー（beta error）と呼んでいます。また、βエラーを1から引いたものを検出力（power）と呼んでいます。
+このうち、臨床試験の結果から判断を誤ってしまうケースは2つです。つまり、効果があるのにp≥0.05になってしまうケースと、効果がないのに（帰無仮説が正しいのに）p\<0.05になってしまうケースです。仮説検定では、前者をαエラー（alpha error）、後者をβエラー（beta error）と呼んでいます。また、βエラーを1から引いたものを**検出力（power）**と呼んでいます。
 
 | 研究結果 | 真に効果がない（帰無仮説） | 真に効果がある（対立仮説） |
 |----|----|----|
