--- a/jp/index.qmd
+++ b/jp/index.qmd
@@ -144,11 +144,11 @@ a:hover {
 # コーヒーを淹れて、言葉を交わす。湯気とともに時は流れ、統計の世界が少しずつ広がっていく。
 
 このサイトは、統計家の父と医師の娘が交わす小さなコーヒーチャットから生まれました。
-日常の疑問、論文で気になるまま読み進めた箇所、ふと理解が曖昧なままにしていた概念——それらを対話のペースでやわらかく解きほぐしていきます。
+日常の疑問、論文で気になるまま読み進めた箇所、ふと理解が曖昧なままにしていた概念—それらを対話のペースでやわらかく解きほぐしていきます。
 
 難しい統計手法や数式も、冬のマグカップから感じるぬくもりのように、温度のある言葉でそっと説明します。
 物語はRコードで再現可能。
-深く学びたい人も、少し立ち止まりたい人も、夜の静かな時間に読む小さなエッセイのように、どうぞゆっくり味わってください。
+深く学びたい人も、少し立ち止まりたい人も、会話がもたらす数学的世界観への気づきを、どうぞゆっくり味わってください。
 
 ------------------------------------------------------------------------
 
@@ -170,7 +170,7 @@ a:hover {
 
 ### 2. Frequentist thinking — 統計学の思考
 
-がん臨床試験を題材に「仮想的に何度も研究を繰り返したときに、数字はどう振る舞うか？」という**頻度論の発想**を父は語ります。
+がん臨床試験を題材に「仮想的に何度も研究を繰り返したときに、数字はどう振る舞うか？」という**頻度論的なものの見方**を父は語ります。
 
 
 - [Reading a Paper over a Cup of Coffee]
