--- a/jp/study-design-1.qmd
+++ b/jp/study-design-1.qmd
@@ -293,7 +293,7 @@ Keywords: observational study, outcome, study design
 :::::::::::::::::::::::::::::::::
 
 ::: {.callout-note appearance="simple" title="臨床疑問と研究仮説"}
-日常診療をしていると、さまざまな疑問や知りたいことが生じることがあります。診療現場から生まれたありのままの疑問のことを、臨床疑問（clinical question）といいます。臨床研究をスタートするとき、意識してほしいのは、臨床疑問を研究仮説（research hypothesis）として表現することです。研究仮説は、研究デザインに最低限必要な要素で構成されます。たとえば典型的な臨床研究では、以下のような要素が含まれることが多いでしょう。
+日常診療をしていると、さまざまな疑問や知りたいことが生じることがあります。診療現場から生まれたありのままの疑問のことを、**臨床疑問（clinical question）**といいます。臨床研究をスタートするとき、意識してほしいのは、臨床疑問を**研究仮説（research hypothesis）**として表現することです。研究仮説は、研究デザインに最低限必要な要素で構成されます。たとえば典型的な臨床研究では、以下のような要素が含まれることが多いでしょう。
 
 -   Patients/Population
 -   Intervention/Exposure
