--- a/jp/frequentist-3.qmd
+++ b/jp/frequentist-3.qmd
@@ -164,7 +164,7 @@ Keywords: clinical trial, p-value, scientific writing, survival/competing-risk
 :::
 
 ::: voice-father
-お父さん「そろそろ帰る時間だと思って、たっぷり淹れてた。そうそう、JCOG9502の論文で生存曲線とp値の話をしたことがあったよね（Sasako, et al. 2006）。そのとき気になったんだけどさ。どうしてp値が0.05より小さいと統計学的に有意って言ったの？」
+お父さん「そろそろ帰る時間だと思って、たっぷり淹れてた。そうそう、JCOG9502の論文で生存曲線とp値の話をしたことがあったよね（Sasako, et al. 2006）。そのとき気になったんだけどさ。どうしてp値が0.05より小さいと統計学的に有意っていったの？」
 :::
 
 ::: voice-daughter
@@ -239,7 +239,7 @@ After 8 years of slow accrual, the JCOG data and safety monitoring committee app
 :::
 
 ::: voice-father
-お父さん「登録が難航したため、苦肉の策でαエラーを0.1に緩めたみたい。本当は試験途中に有意水準は変えるべきではないんだけど、それでも重要な知見だから、こうして論文として多くの人に読まれているわけだよね」
+お父さん「登録が難航したため、苦肉の策でαエラーを0.1に緩めたみたい。本当は試験途中にαエラーは変えるべきではないんだけど、それでも重要な知見だから、こうして論文として多くの人に読まれているわけだよね」
 :::
 
 ::: voice-daughter
