--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -151,7 +151,7 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では交絡因子を調整しないといけない、とかいってたよね」
+私「お父さん、ロジスティック回帰でわからないことがあるんだけど。以前、観察研究では**交絡因子**を調整しないといけない、とかいってたよね」
 ::: 
 
 ::: voice-father
@@ -205,7 +205,7 @@ a:hover {
 ![図2.png](logistic-regression-1.png)
 
 ::: voice-father
-お父さん「答えはこちら」
+お父さん「答えはこれ」
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
@@ -229,7 +229,7 @@ a:hover {
 ::: 
 
 ::: voice-father
-お父さん「そういうこと。こういう因子は、疫学では交絡因子（confounder）と呼ばれているんだけど、ロジスティック回帰で調整しないといけない。調整したときとしないときで、まったく違った結果が得られるっていう数値例を示そう」
+お父さん「そういうこと。前にいったように、こういう因子は、疫学では**交絡因子（confounder）**と呼ばれている。交絡因子はロジスティック回帰で調整しないといけない。調整したときとしないときで、まったく違った結果が得られるっていう数値例を示そう」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -279,7 +279,7 @@ a:hover {
 ::: 
 
 ::: voice-daughter
-私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」**
+私「コーヒー摂取割合ね。層別前は30%。喫煙集団では78%、非喫煙集団では11%だよ」
 ::: 
 
 ::: voice-father
