--- a/jp/study-design-1.qmd
+++ b/jp/study-design-1.qmd
@@ -168,7 +168,7 @@ Keywords: observational study, outcome, study design
 :::
 
 ::: voice-daughter
-私「診療科の上司に、そろそろ研究して学会発表でもしてみないかって言われてさ。その先生、2016年のがん対策基本法が改正されてからずっと、がん患者さんの就労支援に興味があるの。要するに、私にその調査をやらせたいみたい。まあやってみたくなくはないけどね。これって統計じゃない？」
+私「診療科の上司に、そろそろ研究して学会発表でもしてみないかって言われてさ。その先生、2016年がん対策基本法が改正されてからずっと、がん患者さんの就労支援に興味があるの。要するに、私にその調査をやらせたいみたい。まあやってみたくなくはないけどね。これって統計じゃない？」
 :::
 
 ::: voice-father
