--- a/jp/study-design-4.qmd
+++ b/jp/study-design-4.qmd
@@ -196,7 +196,7 @@ a:hover {
 :::
 
 ::: voice-father
-お父さん「そうだね。除外するとバイアスが生じると思う。がん患者さんを追跡するような臨床研究では、大切なことが3つある。1つ、どのタイミングを時間原点 （time origin）にするかを決める必要があるよね。この場合、時間原点は退院日にするといい。2つ、追跡期間の目標を設定して、その時点までは、可能な限り情報を収集すること。 情報が取れないとバイアスが生じる原因になる。3つ、時間原点後に生じたイベントは除外してはならない」
+お父さん「そうだね。除外するとバイアスが生じると思う。がん患者さんを追跡するような臨床研究では、大切なことが3つある。1つ、どのタイミングを**時間原点 （time origin）**にするかを決める必要があるよね。この場合、時間原点は退院日にするといい。2つ、追跡期間の目標を設定して、その時点までは、可能な限り情報を収集すること。 情報が取れないとバイアスが生じる原因になる。3つ、時間原点後に生じたイベントは除外してはならない」
 :::
 :::::::::::::::::::::::::::::::::
 
@@ -286,7 +286,7 @@ a:hover {
 
 ::: {.callout-note appearance="simple"  title="生存時間データの入力"}
 
-生存時間データは2つの変数の組であるため、Rの関数に入力するときもペアで指定する必要があります。`survival`パッケージの`survfit()`や`coxph()`では、実は入力専用の関数`Surv()`を用意しています。入力の仕様はパッケージによってまちまちで、たとえば`mets`パッケージでは`Event()`が用いられています。`cifmodeling`パッケージの`cifplot()`は、`Surv()`と`Event()`の両方に対応しています。
+生存時間データは2つの変数の組であるため、Rの関数に入力するときもペアで指定する必要があります。**survival**パッケージの`survfit()`や`coxph()`では、実は入力専用の関数`Surv()`を用意しています。入力の仕様はパッケージによってまちまちで、たとえば**mets**パッケージでは`Event()`を別に定義して用いています。**cifmodeling**パッケージの`cifplot()`は、`Surv()`と`Event()`の両方に対応しています。
 
 ```{r surv_example, eval=FALSE}
 library(survival)
@@ -313,7 +313,7 @@ cifplot(Event(time, status) ~ stoma,
 :::
 
 ::: voice-father
-お父さん「いま話したような扱いをするなら、死亡した患者さんは、打ち切りという分類に含まれることになる。ただし、競合リスク （competing risk）という別の扱い方もある。簡単に言うと、それが起こると研究で調べたいイベント（たとえば死亡や復職）が観察されなくなる、競合するイベントのことだよ」
+お父さん「いま話したような扱いをするなら、死亡した患者さんは、打ち切りという分類に含まれることになる。ただし、競合リスク （competing risk）という別の扱い方もある。簡単にいうと、それが起こると研究で調べたいイベント（たとえば死亡や復職）が観察されなくなる、競合するイベントのことだよ」
 :::
 
 ::: voice-daughter
@@ -335,7 +335,7 @@ cifplot(Event(time, status) ~ stoma,
 
 ::: {.callout-note appearance="simple"  title="ランダム誤差とバイアス"}
 
-統計学は誤差を扱う学問ですが、臨床研究ではランダム誤差（random error）とバイアス（bias）を区別することが大切です。ランダム誤差は、基本的にはゼロを中心としたばらつきを想定しています。一方で、得られた推定値が真の値から系統的にずれていることを、バイアスといいます。臨床研究における統計学の目標は、ランダム誤差を制御し、バイアスを可能な限りゼロに近づけることです。
+統計学は誤差を扱う学問ですが、臨床研究では**ランダム誤差（random error）**と**バイアス（bias）**を区別することが大切です。ランダム誤差は、基本的にはゼロを中心としたばらつきを想定しています。一方で、得られた推定値が真の値から系統的にずれていることを、バイアスといいます。臨床研究における統計学の目標は、ランダム誤差を制御し、バイアスを可能な限りゼロに近づけることです。
 
 たとえるなら、ランダム誤差は的の中心を狙って矢を放つときのばらつき、バイアスは狙いが中心からずれている状態といえます。競合リスクの扱いを間違ったとき生じるKaplan-Meier曲線のバイアスは、ランダム誤差ではありませんよね。ランダム誤差はサンプルサイズを大きくすることで減少させることができますが、バイアスは研究デザインやデータ収集方法を工夫しないと、解消できません。
 
