--- a/jp/frequentist-2.qmd
+++ b/jp/frequentist-2.qmd
@@ -264,15 +264,7 @@ summary(fit)
 :::
 
 ::: voice-father
-お父さん「分野によって使われる統計手法が違うからね。がんの臨床試験データの解析を勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がいいよ（Green, et al. 2013）」
-:::
-
-::: voice-daughter
-私「話を戻すとさ。p値は0.05より小さいと統計学的に有意なんでしょ。つまり、LTA群の方が、治療成績が悪かったけど、p値をみると2群に有意差はないんだよね」
-:::
-
-::: voice-father
-お父さん「大まかな理解はあってるけど、p値の正確な意味は誤解されてることが多いんだよ。まあ、頻度論（frequentist）の立場で統計学を学ばないと、なかなか難しいんだけどね。p値に関する説明をいくつかしてみようか」
+お父さん「分野によって使われる統計手法が違うからね。がんの臨床試験データの解析を勉強するなら、米国で有名な臨床試験グループ（SWOG）の統計家が書いた臨床試験の教科書がいいよ（Green, et al. 2013）。話を戻すとさ。大まかな理解はあってるけど、p値の正確な意味は誤解されてることが多いんだよ。まあ、頻度論（frequentist）の立場で統計学を学ばないと、なかなか難しいんだけどね。p値に関する説明をいくつかしてみようか」
 :::
 
 1.  p値は帰無仮説が正しい確率である
