--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -174,7 +174,7 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 :::
 
 ::: voice-daughter
-私「ありがとう。あのさ、ハードなエンドポイントとソフトなエンドポイントって言い回しがあるじゃない？」
+私「ありがとう。あのさ、**ハードなエンドポイント**と**ソフトなエンドポイント**って言い回しがあるじゃない？」
 :::
 
 ::: voice-father
@@ -218,13 +218,13 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 :::
 
 ::: voice-father
-お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる。**これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね」
+お父さん「そうそう。もっと具体的にいうとね、死亡に至るまで100%の情報を集める必要はないんだ。でも、それは死亡情報の収集に偏りがないときだけ。**死亡情報が集まるかどうかが、患者の健康状態に依存してしまうと、バイアスの原因になる**。これは生存時間データの打ち切りが、ランダムでなくなるからなんだ。この前、RのKaplan-Meier曲線とAalen-Johansen曲線をみせたよね。あの曲線は、打ち切りがあっても描ける。でもバイアスがなく。正確であるためには、打ち切りが、病状や予後とは関係なくランダムに起きていることが前提になってる。たとえば追跡期間が1年って決まっていて、全員1年で打ち切りになるとか、外的要因のため一部の患者で観察が続けられなくなるとかね。結局、情報が偏るとバイアスが生じるのは、ハードなエンドポイントでもソフトなエンドポイントでも同じこと」
 :::
 
 ### バイアスの分類
 
 ::: voice-daughter
-私「情報が偏ったらバイアスっていうのはわかるけど。死亡が特定できないのはどうしようもないときだもの。ベストを尽くすしかないよね。じゃあさ、私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
+私「そりゃあ、データが偏ったらバイアスっていうのは私にもわかるけど。死亡情報が集められないのはどうしようもないときだもの。ベストを尽くすしかないよね。じゃあさ、私の調査で、それ以外に気をつけておいた方がいいバイアスってある？」
 :::
 
 ::: voice-father
