--- a/jp/logistic-regression-1.qmd
+++ b/jp/logistic-regression-1.qmd
@@ -303,9 +303,10 @@ glm(y ~ x1 + x2, family = poisson(), data = dat)
 ::: 
 ::::::::::::::::::::::::::::::::: 
 
-::: {.callout-note title="このエピソードに関係するクイズです"}
 
-ロジスティック回帰のリンク関数は、ロジット関数以外のものを代わりに使うことができます。リンク関数をうまく指定して確率πを変換することで、オッズ比以外の関連の指標を求められることが知られています。次の指標のうち、対応するリンク関数がなく、求められないものはどれでしょうか。
+::: {.callout-note appearance="simple" title="このエピソードに関係するクイズです"}
+
+ロジスティック回帰のリンク関数は、ロジット関数以外のものを代わりに使うことができます。リンク関数をうまく指定してリスク$\pi$を変換することで、オッズ比以外の関連の指標を求められることが知られています。次の指標のうち、対応するリンク関数がなく、求められないものはどれでしょうか。
 
 1.  リスク差
 2.  リスク比
@@ -313,7 +314,7 @@ glm(y ~ x1 + x2, family = poisson(), data = dat)
 4.  1、2、3すべて求めることができる
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple" collapse="true" title="答えはこちら"}
 -   **正解は4です**
 
 一般化線型モデルはロジスティック回帰を一般化したもので、「リンク関数」を変えることで、さまざまな指標を計算できます（田中2022）。詳しくはのちのエピソードで述べますが、リンク関数は、ロジスティック回帰でいえば、リスク$\pi$を関数$g(\pi)$を用いて変換しています。
@@ -325,7 +326,9 @@ glm(y ~ x1 + x2, family = poisson(), data = dat)
 ハザード比を求めるには、$g(\pi)=\log\{-\log⁡(1-\pi)\}$つまり補2重対数（complementary log-log）関数を指定します。
 :::
 
+### 文献
 
+- [田中司朗. 医学研究のための因果推論I. 一般化線型モデル. 東京: 朝倉書店; 2022](https://www.asakura.co.jp/detail.php?book_code=12270)
 
 ### Continuation of their story
 
