--- a/jp/logistic-regression-2.qmd
+++ b/jp/logistic-regression-2.qmd
@@ -262,7 +262,7 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
 
 このように、ロジット関数はS字型の曲線を表しています。X軸方向にどんな値をとったとしても、Y軸方向の変化は0から1の範囲に収まることが、特徴のひとつです。そして、曲線の傾きは回帰係数$\beta_1$によって決まります。
 
-![プレゼンテーション1.png](logistic-regression-4.png)
+![](logistic-regression-4.png)
 
 :::
 
@@ -317,8 +317,7 @@ $\log(\frac{\pi_i}{1-\pi_i})=\beta_0+\beta_1X_{i}$
 |  | なし | あり | Fine-Grayモデル | 回帰モデルの一種 |
 :::
 
-
-::: {.callout-note title="このエピソードに関係するクイズです"}
+::: {.callout-note appearance="simple"  title="このエピソードに関係するクイズです"}
 
 脳卒中発症の有無をアウトカム、LDLコレステロールを共変量としてロジスティック回帰を当てはめたとします。LDLコレステロールの単位をmg/dLからmmol/Lに変換したとき、オッズ比は何倍になるでしょうか。ただし
 
@@ -332,7 +331,7 @@ LDLコレステロール(mmol/L) =LDL コレステロール(mg/dL) ×0.02586
 4.  1、2、3すべて誤り
 :::
 
-::: {.callout-note collapse="true" title="答えはこちら"}
+::: {.callout-note appearance="simple"  collapse="true" title="答えはこちら"}
 **正解は4です。**
 
 これは単位を換算にするにはどうすればよいかという問題です。ある共変量*X*の効果は、回帰係数*β*との積（*βX*）で表され、それは共変量の単位によらず一定ですよね。このことに気づくと、答えに近づきます。*X*の単位を定数倍すると、*β*は定数分の一に換算されます。ただし、ロジスティック回帰では、回帰係数からロジット関数を経由してオッズ比を求めるため、単位を換算するには、1/0.02586乗のようにべき乗の操作をすることになります。
