--- a/jp/study-design-2.qmd
+++ b/jp/study-design-2.qmd
@@ -160,7 +160,7 @@ Keywords: outcome, simulation
 
 ::::::::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「コーヒー淹れたから、もう少し相談させてよ。さっきRの話がで他でしょ。そのとき、どの関数を使うかもアウトカムによって違うんだよっていってたじゃない？あれ、いまいちピンとこないんだけど。データなんて、全部数字じゃないの？」
+私「コーヒー淹れたから、もう少し相談させてよ。さっきRの話がでたでしょ。そのとき、どの関数を使うかもアウトカムによって違うんだよっていってたじゃない？あれ、いまいちピンとこないんだけど。データなんて、全部数字じゃないの？」
 :::
 
 ::: voice-father
