--- a/jp/study-design-5.qmd
+++ b/jp/study-design-5.qmd
@@ -228,7 +228,7 @@ Keywords: observational study, outcome, simulation, survival/competing-risk, stu
 :::
 
 ::: voice-father
-お父さん「そうだね。調査票を郵送するんでしょ。そういうとき、**回答してくれない患者が多いと偏りが生じやすい**から、回答率を挙げる工夫をするといい。たとえば、調査票で年収って聞いてる？」
+お父さん「そうだね。調査票を郵送するんでしょ。そういうとき、**回答してくれない患者が多いと偏りが生じやすい**から、回答率を上げるように工夫するといい。たとえば、調査票で年収って聞いてる？」
 :::
 
 ::: voice-daughter
