--- a/jp/truth.qmd
+++ b/jp/truth.qmd
@@ -1,9 +1,16 @@
 ---
+title: "Truth: What Is It That You Want to Know?"
 format:
   html:
     toc: true
 ---
+
+```{=html}
 <style>
+header#title-block-header.quarto-title-block {
+  display: none !important;
+}
+
 body {
   margin: 0;
   background: #ffffff;
@@ -127,22 +134,24 @@ a:hover {
   margin-bottom: 0.4rem;
 }
 
-.serif-text p {
-  font-family: "Georgia", "Times New Roman", serif;
+.text-right {
+  text-align: right;
 }
 .serif-block p {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 0.9em;  line-height: 1.6;
 }
 </style>
+```
 
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Truth
 
-::: serif-block
-　　　　　　　　　　　　Keywords: clinical trial, observational study, Rubin causal model
+# Story and Quiz − Truth: What Is It That You Want to Know?
+
+::: {.serif-block .text-right}
+Keywords: clinical trial, observational study, Rubin causal model, study design
 :::
 
 ------------------------------------------------------------------------
@@ -159,7 +168,7 @@ a:hover {
 ::: 
 
 ::: voice-father
-お父さん「ありがとう。この前ね、層別解析やロジスティック解析による**共変量調整**の話をしたよね」
+お父さん「ありがとう。この前ね、層別解析やロジスティック解析による**調整（adjustment）**の話をしたよね」
 ::: 
 
 ::: voice-daughter
@@ -199,12 +208,8 @@ a:hover {
 ::: 
 
 ::: voice-father
-お父さん「わかるよ。でも、データとロジスティック回帰だけじゃ、調整した結果が正しいかどうかわからないっていうのが統計学の結論なんだ」
+お父さん「わかるよ。でも、データとロジスティック回帰だけじゃ、調整した結果が正しいかどうかわからないっていうのが統計学の結論なんだ。そろそろ本当のことを話そう」
 :::
-
-::: voice-daughter
-私「いや、専門家にそんなこといわれましても」
-::: 
 
 ### Rubin因果モデル
 
@@ -244,6 +249,30 @@ a:hover {
 お父さん「ランダム化臨床試験は、むしろ"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査は、いわゆる観察研究でしょ。研究仮説がまだ曖昧じゃないかな、特にPatientsとControlがね。また、ランダム化してないから比較可能性が低いよね。交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない。ここで大切なのは、ロジスティック回帰の結果を、因果関係を考えるための材料として正しく読み解くためには、因果推論の考え方が必要だってこと。ここで話したのは**Rubin因果モデル**っていって因果モデルのひとつなんだけどね」
 ::: 
 
+::: voice-daughter
+私「因果モデルねえ。一般化線型モデルと違うの？」
+:::
+
+::: voice-father
+お父さん「違いを一言でいうと、一般化線型モデルはデータが生じる構造、因果モデルは因果関係の構造を表している。**データが発生する背後に因果モデルがある**っていう関係かな。さっき潜在結果変数って出てきたでしょ」
+:::
+
+::: voice-daughter
+私「でてきたっけ」
+:::
+
+::: voice-father
+お父さん「でてきた。たとえば術式THで胃がん手術を受けた患者が、もし術式LTAだったとしたらっていう仮想的なアウトカムのことを潜在結果変数っていうんだ。潜在結果変数は観測できないでしょ。別の治療なんだから」
+:::
+
+::: voice-daughter
+私「もちろん。そうね、そういわれると確かに因果関係の真実は、データの発生する背後にあるわね」
+:::
+
+::: voice-father
+お父さん「そういうこと。もし別の治療を選んでいたら...について推測するのが、Rubin因果モデル。きちんと考えたら理解できる考え方でしょ。でも研究現場やデータを少し高いところから眺めているようで、実感はしにくいかもしれない。でも因果の問いは、世界の仕組みを抽象化して再構築しないと答えられないんだ」
+:::
+
 ### 研究仮説
 
 ::: voice-daughter
@@ -251,7 +280,7 @@ a:hover {
 ::: 
 
 ::: voice-father
-私「いる。お父さんの言いたいことわかってきたよ。データを集めてロジスティック回帰をすると、自動的に結論が出るわけじゃないんだ。それは、うちの診療科だけのデータでRを試してたときにも、そう思ったよ。有意だったら因果関係あり、有意じゃなかったら因果関係なしみたいに、白黒はっきりしてないんだなって。でも、どんな集団が解析対象なのかや、ストーマ保有者をどんな集団と比べているのか、足りない交絡因子はなにかなど、どの部分の詰めが甘いのかが見えてきた」
+私「いる。お父さんの言いたいことわかってきたよ。データを集めてロジスティック回帰をすると、自動的に結論が出るわけじゃないんだ。それは、うちの診療科だけのデータでRを試してたときから気づいてたよ。有意だったら因果関係あり、有意じゃなかったら因果関係なしみたいに、白黒はっきりしてないんだなって。でも、どんな集団が解析対象なのかや、ストーマ保有者をどんな集団と比べているのか、足りない交絡因子はなにかなど、どの部分の詰めが甘いのかがだんだん見えてきた」
 ::: 
 
 ::: voice-father
