--- a/jp/truth.qmd
+++ b/jp/truth.qmd
@@ -168,7 +168,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「ありがとう。この前ね、層別解析やロジスティック解析による**調整（adjustment）**の話をしたよね」
+お父さん「ありがとう。この前ね、層別解析やロジスティック回帰でバイアスを**調整（adjustment）**できるよって話をしたよね」
 ::: 
 
 ::: voice-daughter
@@ -246,7 +246,7 @@ Keywords: clinical trial, observational study, Rubin causal model, study design
 ::: 
 
 ::: voice-father
-お父さん「ランダム化臨床試験は、むしろ"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査は、いわゆる観察研究でしょ。研究仮説がまだ曖昧じゃないかな、特にPatientsとControlがね。また、ランダム化してないから比較可能性が低いよね。交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない。ここで大切なのは、ロジスティック回帰の結果を、因果関係を考えるための材料として正しく読み解くためには、因果推論の考え方が必要だってこと。ここで話したのは**Rubin因果モデル**っていって因果モデルのひとつなんだけどね」
+お父さん「ランダム化臨床試験は、むしろ"介入したら結果はどうなるか"を調べるためにデザインされているからね。ターゲット集団も明確に定義されているし、介入もランダムに割付けられていてバイアスもない。がんサバイバー調査は、いわゆる観察研究でしょ。研究仮説がまだ曖昧じゃないかな、特にPatientsとControlsがね。また、ランダム化してないから比較可能性が低いよね。交絡因子のデータがバイアスを調整するためじゅうぶんかどうかわからない。ここで大切なのは、ロジスティック回帰の結果を、因果関係を考えるための材料として正しく読み解くためには、因果推論の考え方が必要だってこと。ここで話したのは**Rubin因果モデル**っていって因果モデルのひとつなんだけどね」
 ::: 
 
 ::: voice-daughter
