--- a/jp/logistic-regression-5.qmd
+++ b/jp/logistic-regression-5.qmd
@@ -1,9 +1,16 @@
 ---
+title: "Simpson's paradox"
 format:
   html:
     toc: true
 ---
+
+```{=html}
 <style>
+header#title-block-header.quarto-title-block {
+  display: none !important;
+}
+
 body {
   margin: 0;
   background: #ffffff;
@@ -127,22 +134,24 @@ a:hover {
   margin-bottom: 0.4rem;
 }
 
-.serif-text p {
-  font-family: "Georgia", "Times New Roman", serif;
+.text-right {
+  text-align: right;
 }
 .serif-block p {
   font-family: "Georgia", "Times New Roman", serif;
   font-size: 0.9em;  line-height: 1.6;
 }
 </style>
+```
 
 ::: hero-header
 ![](../image/father-daughter.png){.hero-header-img}
 :::
-# Story and Quiz − Adjusting for bias V
 
-::: serif-block
-　　　　　　　　　　　　Keywords: binary data, risk- and effect-measures, generalized linear model, confounding/information-bias/selection-bias
+# Adjusting for bias V − Simpson's paradox
+
+::: {.serif-block .text-right}
+Keywords: binary outcome, confounding/collapsibility, effect measure, generalized linear model
 :::
 
 ------------------------------------------------------------------------
@@ -271,7 +280,7 @@ a:hover {
 
 ::::::::::::::::::::::::::::::::: dialogue
 ::: voice-daughter
-私「へー。単純な解析ではリスク因子なのに、層別解析では関連が消えた。こんなことあるんだ」
+私「へー。単純な解析ではリスク因子なのに、層別しただけで関連が消えた。こんなことあるんだ」
 ::: 
 
 ::: voice-father
@@ -333,15 +342,15 @@ print(odds_ratio2)
 ::: 
 
 ::: voice-daughter
-私「そりゃあね。解析方法によってオッズ比が1になるのは不思議だもの」
+私「そりゃあね。解析方法によってオッズ比が1になるのは不思議だもの。あれ？ちょっと前こうやって雑談してたとき、オッズ比は層別すると数値が安定しないっていってたっけ？」
 ::: 
 
 ::: voice-father
-お父さん「ポイントは3つの変数の相関関係なんだ。第3の因子と曝露に相関があり、さらに第3の因子とアウトカムにも相関があるとき、Simpsonのパラドックスが起きる」
+お父さん「うん、オッズ比は併合可能ではない、non-collapsibleな指標だね。でも、Simpsonのパラドックスの条件は、オッズ比固有のものじゃない。ポイントは3つの変数の相関関係なんだ。第3の因子と曝露に相関があり、さらに第3の因子とアウトカムにも相関があるとき、Simpsonのパラドックスが起きる」
 ::: 
 
 ::: voice-daughter
-私「なるほどね、喫煙はコーヒー摂取と関連する。さらに喫煙は膵がんリスクも上げる。そうするとオッズ比の値が変わる。ああ、もともとバイアスがあるんだから、調整して値が変わるのは当たり前か」
+私「なるほどね、喫煙はコーヒー摂取と関連する。さらに喫煙は膵がんリスクも上げる。そうするとオッズ比の値が変わる。ああ、もともとバイアスが入っちゃってたんだから、調整して値が変わるのは当たり前か」
 ::: 
 :::::::::::::::::::::::::::::::::
 
